add flow to handle token refresh

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable
 
 AUTH_SECRET=my-auth-secret
+TOKEN_VALID_HOURS=168
+REFRESH_TOKEN_VALID_HOURS=336
