update golangci-lint to 2.5.0

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,35 +1,33 @@
+version: "2"
 run:
-  max-issues-per-linter: 0
-  max-same-issues: 0
-  timeout: 5m
   tests: true
-
 linters:
-  enable-all: true
+  default: all
   disable:
-    - wrapcheck
-    - varnamelen
-    - testpackage
     - depguard
-    # - gofumpt
-    - gci # not compatible with goimports. Both try to change in different way
-  # enable:
-  #   - govet
-  #   - errcheck
-  #   - staticcheck
-  #   - gosimple
-  #   - unused
-  #   - gofmt
-  #   - goimports
-  #   - ineffassign
-  #   - misspell
-  #   - unparam
-  #   - stylecheck
-  #   - gocritic
-  #   - revive
-  #   - gosec
-  #   - prealloc
-  #   - copyloopvar
-issues:
-  exclude-use-default: false
-
+    - nolintlint
+    - testpackage
+    - varnamelen
+    - wrapcheck
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
