finalize golangci.yml config

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -4,21 +4,23 @@ run:
 linters:
   default: all
   disable:
-    - depguard
-    - nolintlint
-    - testpackage
-    - varnamelen
+    - depguard # dont understand tbh, just doesnt let to import external packages in internal/*/*.go files
+    - testpackage # forces to add _test prefix to package names in _test.go files, but how to test private functions then?
+    - varnamelen # 'e' and 'c' are echo convetions for app and ctx var names, but this lint keeps complaining
   exclusions:
     rules:
-    - path: internal/handlers # ignore because 'return c.JSON( is echo convention and wrapcheck hates it
+    - path: internal/handlers # ignore for wrapcheck because 'return c.JSON( is echo convention and wrapcheck hates it
       linters:
         - wrapcheck
       text: ".*"
     generated: lax
 formatters:
+  default: all
   enable:
+    # - gci not compatible with goimports and gofumpt?
     - gofmt
     - gofumpt
     - goimports
+    - golines
   exclusions:
     generated: lax
