--- a/sqlc.yml
+++ b/sqlc.yml
@@ -1,10 +1,10 @@
 version: "2"
 sql:
-  - schema: "internal/db/sql/migrations"
-    queries: "internal/db/sql/queries"
+  - schema: "services/auth/db/sql/migrations"
+    queries: "services/auth/db/sql/queries"
     engine: "postgresql"
     gen:
       go:
         emit_json_tags: true
         package: "db"
-        out: "internal/db/generated"
+        out: "services/auth/db/generated"
