update docker-compose to launch service, update env vars to have DINE_ prefix

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
-DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+POSTGRES_DB=dining
 
-AUTH_SECRET=my-auth-secret
-TOKEN_VALID_HOURS=168
-REFRESH_TOKEN_VALID_HOURS=336
+DINE_DB_URI=postgres://postgres:postgres@postgres:5432/dining?sslmode=disable
+DINE_HTTP_ADDRESS=localhost:42069
+
+DINE_AUTH_SECRET=my-auth-secret
+DINE_TOKEN_VALID_HOURS=168
+DINE_REFRESH_TOKEN_VALID_HOURS=336
