--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,9 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=dining
 
+DINE_APP_ENVIRONMENT=local
 DINE_DB_URI=postgres://postgres:postgres@postgres:5432/dining?sslmode=disable
-DINE_HTTP_ADDRESS=localhost:42069
+DINE_HTTP_ADDRESS=127.0.0.1:42069
 
 DINE_AUTH_SECRET=my-auth-secret
 DINE_TOKEN_VALID_HOURS=168
