--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,11 @@ linters:
         - wrapcheck
       text: ".*"
     generated: lax
+  settings:
+    tagliatelle:
+      case:
+        rules:
+          yaml: snake
 formatters:
   default: all
   enable:
