finalize env variabels and docker-compose

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,12 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=dining
+POSTGRES_PORT=5432
 
 DINE_APP_ENVIRONMENT=local
 DINE_DB_URI=postgres://postgres:postgres@postgres:5432/dining?sslmode=disable
-DINE_HTTP_ADDRESS=127.0.0.1:42069
+DINE_HTTP_ADDRESS=0.0.0.0:42069
+DINE_HTTP_PORT=42069
 
 DINE_AUTH_SECRET=my-auth-secret
 DINE_TOKEN_VALID_HOURS=168
