change user role from string to int, change token valid time from hours to seconds

--- a/sqlc.yml
+++ b/sqlc.yml
@@ -8,3 +8,6 @@ sql:
         emit_json_tags: true
         package: "db"
         out: "services/auth/db/generated"
+        overrides:
+          - go_type: "int"
+            db_type: "pg_catalog.int4"
