--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ DINE_HTTP_PORT=42069
 DINE_AUTH_SECRET=my-auth-secret
 DINE_TOKEN_VALID_SECONDS=86400
 DINE_REFRESH_TOKEN_VALID_SECONDS=604800
+
+DINE_AUTHORIZE_ENDPOINT=http://localhost:42069/api/v1/auth/authorize
