add new menu item with image upload

--- a/sqlc.yml
+++ b/sqlc.yml
@@ -23,3 +23,6 @@ sql:
         overrides:
           - go_type: "int"
             db_type: "pg_catalog.int4"
+          - go_type: "float64"
+            db_type: "pg_catalog.numeric"
+            
