--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,4 @@ DINE_TOKEN_VALID_SECONDS=86400
 DINE_REFRESH_TOKEN_VALID_SECONDS=604800
 
 DINE_AUTHORIZE_ENDPOINT=http://localhost:42069/api/v1/auth/authorize
+DINE_MAX_IMAGE_SIZE_BYTES=5242880
