readme fix, docker-compose fix, env fix

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@ POSTGRES_DB=dining
 POSTGRES_PORT=5432
 
 DINE_APP_ENVIRONMENT=local
-DINE_DB_URI=postgres://postgres:postgres@postgres:5432/dining?sslmode=disable
+DINE_AUTH_DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable&search_path=auth
+DINE_MANAGEMENT_DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable&search_path=management
 DINE_HTTP_ADDRESS=0.0.0.0:42069
 DINE_HTTP_PORT=42069
 
