Remove a lot  of //nolint + use disable & enable for revive linter to disable particular checks

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,6 +7,13 @@ linters:
     - depguard # dont understand tbh, just doesnt let to import external packages in internal/*/*.go files
     - testpackage # forces to add _test prefix to package names in _test.go files, but how to test private functions then?
     - varnamelen # 'e' and 'c' are echo convetions for app and ctx var names, but this lint keeps complaining
+    - wsl # deprecated since v2.2.0
+  settings:
+    tagliatelle:
+      case:
+        rules:
+          yaml: snake
+          json: snake
   exclusions:
     rules:
     - path: services/auth/handler # ignore for wrapcheck because 'return c.JSON( is echo convention and wrapcheck hates it
@@ -22,13 +29,7 @@ linters:
         - wrapcheck
       text: ".*"
     generated: lax
-  settings:
-    tagliatelle:
-      case:
-        rules:
-          yaml: snake
 formatters:
-  default: all
   enable:
     # - gci # not compatible with goimports and gofumpt, tries to change imports in different way.
     - gofmt
