--- a/api/openapi-spec/components/schemas/auth/refresh.yml
+++ b/api/openapi-spec/components/schemas/auth/refresh.yml
@@ -1,9 +1,9 @@
 RefreshRequest:
   type: object
   required:
-    - refreshToken
+    - refresh_token
   properties:
-    refreshToken:
+    refresh_token:
       type: string
       example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
 
