Add codecov and ci/cd badges to readme

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,6 @@
 comment:
   layout: " header, diff, flags, files"
-  behavior: default
+  behavior: new
   require_changes: false
   require_base: false
   require_head: false
