--- a/codecov.yml
+++ b/codecov.yml
@@ -5,3 +5,9 @@ comment:
   require_base: false
   require_head: false
   hide_project_coverage: false
+
+coverage:
+  status:
+    project:
+      default: true 
+
