--- a/api/openapi-spec/components/schemas/management/restaurants.yml
+++ b/api/openapi-spec/components/schemas/management/restaurants.yml
@@ -47,9 +47,6 @@ RestaurantListResponse:
 
 RestaurantUpdateRequest:
   type: object
-  required:
-    - name
-    - address
   properties:
     name:
       type: string
@@ -57,6 +54,9 @@ RestaurantUpdateRequest:
     address:
       type: string
       example: "Švenčionių g. 36 Updated"
+    delete_flag:
+      type: bool
+      example: false
 
 RestaurantUpdateResponse:
   type: object
@@ -70,7 +70,15 @@ RestaurantUpdateResponse:
     address:
       type: string
       example: "Švenčionių g. 36 Updated"
+    created_at:
+      type: string
+      format: date-time
+      example: "2025-10-22T12:00:00Z"
     updated_at:
       type: string
       format: date-time
       example: "2025-10-22T12:00:00Z"
+    deleted_at:
+      type: string
+      format: date-time
+      example: ""
