--- a/sqlc.yml
+++ b/sqlc.yml
@@ -17,9 +17,10 @@ sql:
     engine: "postgresql"
     gen:
       go:
-        emit_json_tags: true
         package: "db"
         out: "services/management/db/generated"
+        emit_json_tags: true
+        emit_pointers_for_null_types: true
         overrides:
           - go_type: "int"
             db_type: "pg_catalog.int4"
