Add tagalign linter settings in golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -14,6 +14,10 @@ linters:
         rules:
           yaml: snake
           json: snake
+    tagalign:
+      order:
+          - json
+          - form
   exclusions:
     rules:
     - path: services/auth/handler # ignore for wrapcheck because 'return c.JSON( is echo convention and wrapcheck hates it
