--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,9 @@ linters:
     - path: services/management/handler
       linters:
         - wrapcheck
+    - path: services/orders/handler
+      linters:
+        - wrapcheck
       text: ".*"
     - path: pkg/responses
       linters:
