--- a/sqlc.yml
+++ b/sqlc.yml
@@ -26,4 +26,19 @@ sql:
             db_type: "pg_catalog.int4"
           - go_type: "float64"
             db_type: "pg_catalog.numeric"
+
+  - schema: "services/orders/db/sql/migrations"
+    queries: "services/orders/db/sql/queries"
+    engine: "postgresql"
+    gen:
+      go:
+        package: "db"
+        out: "services/orders/db/generated"
+        emit_json_tags: true
+        emit_pointers_for_null_types: true
+        overrides:
+          - go_type: "int"
+            db_type: "pg_catalog.int4"
+          - go_type: "float64"
+            db_type: "pg_catalog.numeric"
             
