Add currency to restaurants

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ POSTGRES_PORT=5432
 DINE_APP_ENVIRONMENT=local
 DINE_AUTH_DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable&search_path=auth
 DINE_MANAGEMENT_DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable&search_path=management
+DINE_ORDERS_DB_URI=postgres://postgres:postgres@localhost:5432/dining?sslmode=disable&search_path=orders
 DINE_HTTP_ADDRESS=0.0.0.0:42069
 DINE_HTTP_PORT=42069
 
