Implement creating checkout session for and order with stripe provider

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -35,6 +35,10 @@ linters:
       linters:
         - wrapcheck
       text: ".*"
+    - path: services/orders/paymentproviders/stripe # there are a bunch of optional fields in stripe that exhauststruct is complaining about
+      linters:
+        - exhaustruct
+      text: ".*"
     generated: lax
 formatters:
   enable:
