Implement successful payment webhook flow for stripe

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,4 @@ DINE_MAX_IMAGE_SIZE_BYTES=5000000
 DINE_UPLOADS_DIRECTORY=uploads/images/
 
 STRIPE_SECRET_KEY=sk_testsk_test_51Rt...
+STRIPE_WEBHOOK_SECRET=whsec_eb212...
