Implement uploading menu item images to s3

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -39,6 +39,10 @@ linters:
       linters:
         - exhaustruct
       text: ".*"
+    - path: services/management/storage/s3/s3
+      linters:
+        - exhaustruct
+      text: ".*"
     generated: lax
 formatters:
   enable:
