Add tests to remaining orders-service functions reaching 100%

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -47,6 +47,10 @@ linters:
       linters:
         - exhaustruct
       text: ".*"
+    - path: services/orders/services/orders_test
+      linters:
+        - exhaustruct
+      text: ".*"
     generated: lax
 formatters:
   enable:
