Add tests for management/handlers/context.go

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -61,6 +61,9 @@ linters:
     - path: services/management/middleware/auth_test
       linters:
         - exhaustruct
+    - path: services/management/handlers/context_test
+      linters:
+        - exhaustruct
     generated: lax
 formatters:
   enable:
