Add tests for restaurants-handler:HandleCreateRestaurant

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -64,6 +64,9 @@ linters:
     - path: services/management/handlers/context_test
       linters:
         - exhaustruct
+    - path: services/management/handlers/restaurants_test
+      linters:
+        - exhaustruct
     generated: lax
 formatters:
   enable:
