--- a/.golangci.yml
+++ b/.golangci.yml
@@ -70,6 +70,9 @@ linters:
     - path: services/management/handlers/menu_test
       linters:
         - exhaustruct
+    - path: services/management/services/restaurants_test
+      linters:
+        - exhaustruct
     generated: lax
 formatters:
   enable:
